--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
         </button>
       </div>
     </div>
-    <script src="./dist/html2canvas.js"></script>
+    <script src="../../dist/html2canvas.js"></script>
     <script src="./converter.js"></script>
   </body>
 </html>
