--- a/index.html
+++ b/index.html
@@ -6,8 +6,70 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Converter</title>
     <link rel="stylesheet" href="converter.css" />
+    <link rel="stylesheet" href="../static/dashboard/dashboard_base.css" />
   </head>
   <body>
+    <header class="">
+      <div class="logo">
+          <a href="#">
+              <img src="../static/assets/index/logo_hd.png">
+          </a>
+      </div>
+      <i class="fa-solid fa-bars mobile fa-2x icon" onclick="show()"></i>
+      <div class="desktop desktop-link-div">
+          <div class="desktop-links">
+              <div>
+                  <a href="#">Docs</a>
+              </div>
+              <div>
+                  <a href="#">Generator</a>
+              </div>
+              <div>
+                  <a href="#">Saved Favicons</a>
+              </div>
+              <div>
+                  <a href="#">Text-to-Favicon</a>
+              </div>
+              <div>
+                  <a href="#">Contact</a>
+              </div>
+          </div>
+          <div class="desktop-btns">
+              <a href="#" class="initials">JO</a>
+              <a href="#"><button class="desktop-reg bdr">Logout</button></a>
+          </div>
+      </div>
+  </header>
+  <main class="">
+      <div class="mobile mobile-link-div">
+          <div class="links left">
+              <a href="#" class="spaced">
+                  <h5>Docs</h5>
+              </a>
+              <a href="#">
+                  <h5>Generator</h5>
+              </a>
+              <a href="#">
+                  <h5>Saved Favicons</h5>
+              </a>
+              <a href="#">
+                  <h5>Text-to-Favicon</h5>
+              </a>
+              <a href="#">
+                  <h5>Contact</h5>
+              </a>
+              <div class="mobile-btn">
+                  <div class="">
+                      <a href="#" class="initials">JO</a>
+                  </div>
+                  <a href="./accounts/register.html"><button class="mobile-reg">Logout</button></a>
+              </div>
+          </div>
+          <div class="outside-click" onclick="noShow()"></div>
+      </div>
+      <!-- main block -->
+      <!-- endblock -->
+  </main>
     <div class="container">
       <div>
         <form action="" class="form">
@@ -216,7 +278,48 @@
         </button>
       </div>
     </div>
-    <script src="html2canvas.js"></script>
+    <footer class="footer">
+      <div class="l-footer">
+        <div class=" logo">
+          <img src="../static/assets/index/logo_white_ft.png" id="w-logo" alt="Iconcity Logo" class="">
+        </div>
+        <p class="">Iconcity helps you generate your favourite favicon in the twinkle of an eye.</p>
+      </div>
+      <ul class="r-footer">
+        <li class="features similar">
+          <h2>Developers</h2>
+          <ul class="box h-box">
+            <li><a href="#">Doumentation</a></li>
+            <li><a href="#">Tutorial</a></li>
+            <li><a href="#">API Status</a></li>
+          </ul>
+        </li>
+        <li class=" similar resource">
+          <h2>Resources</h2>
+          <ul class="box">
+            <li><a href="#">Introduction</a></li>
+            <li><a href="#">Blog</a></li>
+            <li><a href="#">Help</a></li>
+          </ul>
+        </li>
+  
+        <li class="similar">
+          <h2>Company</h2>
+          <ul class="box">
+            <li><a href="#">About</a></li>
+            <li><a href="#">Contact</a></li>
+            <li><a href="#">Socials</a></li>
+          </ul>
+        </li>
+  
+      </ul>
+      <hr>
+      <div class="b-footer">
+        <p>2022 Iconcity. All rights reserved</p>
+      </div>
+    </footer>
+    <script src="./html2canvas.js"></script>
+    <script src="../static/dashboard/dashboard.js"></script>
     <script src="./converter.js"></script>
   </body>
 </html>
