--- a/index.html
+++ b/index.html
@@ -683,6 +683,7 @@
       </div>
     </footer>
     <script src="html2canvas.js"></script>
+    <script src="jszip.js"></script>
     <script src="dashboard.js"></script>
     <script src="./converter.js"></script>
   </body>
