--- a/index.html
+++ b/index.html
@@ -685,6 +685,7 @@
     <script src="html2canvas.js"></script>
     <script src="jszip.js"></script>
     <script src="FileSaver.js"></script>
+    <script src="base64.js"></script>
     <script src="dashboard.js"></script>
     <script src="./converter.js"></script>
   </body>
